@@ -5,3 +5,6 @@
 1. add view flow method
 2. add preview json method
 3. add save json method
+
+2020-09-17
+1. add upload json method
